deployment_configs/deployment.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: image-signature-webhook
    name: image-signature-webhook
  spec:
    ports:
      - name: https
        port: 443
        protocol: "TCP"
    selector:
      app: image-signature-webhook

- apiVersion: apps/v1beta1
  kind: Deployment
  metadata:
    name: image-signature-webhook
  spec:
    template:
      metadata:
        labels:
          app: image-signature-webhook
      spec:
        serviceAccountName: image-signature-webhook
        containers:
          - name: image-signature-webhook
            ports:
            - containerPort: 8443
            image: "gcr.io/priya-wadhwa/image-whitelist-server:latest"
            imagePullPolicy: Always
            args:
              - "--tls-cert-file=/var/serving-cert/tls.crt"
              - "--tls-private-key-file=/var/serving-cert/tls.key"  
            volumeMounts:
            - mountPath: /var/serving-cert
              name: tls
            - name: pubkeys
              mountPath: /var/gpg_pub/
            - name: privkeys
              mountPath: /var/gpg_priv/
            - name: priyawadhwa-ca-admin
              mountPath: /secret
            env:
            - name: GOOGLE_APPLICATION_CREDENTIALS
              value: /secret/priyawadhwa-ca-admin.json
        imagePullSecrets:
          - name: gcr-json-key
        volumes:
          - name: tls
            secret:
              secretName: tls-image-signature-webhook
          - name: pubkeys
            configMap:
               name: image-signature-gpg
          - name: privkeys
            configMap:
              name: image-signature-gpg-secret
          - name: priyawadhwa-ca-admin
            secret:
              secretName: priyawadhwa-ca-admin

       
- apiVersion: admissionregistration.k8s.io/v1beta1
  kind: ValidatingWebhookConfiguration
  metadata:
    name: image-signature-webhook
  webhooks:
    - name: image-whitelist.babyremote.com
      rules:
        - apiGroups:
            - ""
          apiVersions:
            - v1
          operations:
            - CREATE
          resources:
            - pods
      failurePolicy: Fail
      clientConfig:
        caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR1RENDQXFDZ0F3SUJBZ0lVRCs4dDJvNno0UXo2a0lFLy85YjErSjlxdUtvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1lqRUxNQWtHQTFVRUJoTUNWVk14RHpBTkJnTlZCQWdUQms5eVpXZHZiakVSTUE4R0ExVUVCeE1JVUc5eQpkR3hoYm1ReEVEQU9CZ05WQkFvVEIwZHlZV1psWVhNeEN6QUpCZ05WQkFzVEFrTkJNUkF3RGdZRFZRUURFd2RICmNtRm1aV0Z6TUI0WERURTNNVEF4TmpBMk1UWXdNRm9YRFRJeU1UQXhOVEEyTVRZd01Gb3dZakVMTUFrR0ExVUUKQmhNQ1ZWTXhEekFOQmdOVkJBZ1RCazl5WldkdmJqRVJNQThHQTFVRUJ4TUlVRzl5ZEd4aGJtUXhFREFPQmdOVgpCQW9UQjBke [...]
        service:
          name: image-signature-webhook  
          namespace: default
